--- a/src/scss/page/_Home.scss
+++ b/src/scss/page/_Home.scss
@@ -24,7 +24,8 @@
     position: relative;
     display: block;
     width: 100%;
-    height: calc(100vh - 90px);
+    // height: calc(100vh - 90px);
+    height: 100vh;
 
     .carousel__backdrop {
       @include sm {
