--- a/src/scss/base/_common-use.scss
+++ b/src/scss/base/_common-use.scss
@@ -75,3 +75,25 @@
     margin-top: 5rem;
     margin-bottom: 3rem;
 }
+
+.spinner-full-screen {
+    @include flex($jc: center, $ai: center);
+    visibility: hidden;
+    opacity: 0;
+
+    position: fixed;
+    width: 100%;
+    height: 100vh;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 10;
+    transition: map-get($transition, 500);
+    transition-property: opacity visivility;
+    background-color: rgb(0 0 0 / 78%);
+
+    &.active {
+        visibility: visible;
+        opacity: 1;
+    }
+}
