--- a/src/scss/components/_Header.scss
+++ b/src/scss/components/_Header.scss
@@ -5,8 +5,6 @@
   position: sticky;
   top: 0;
   z-index: 10;
-
-  // margin-top: -(deep-map-get($height, header, lg));
   height: deep-map-get($height, header, lg);
   flex: 1 0 auto;
   padding-left: deep-map-get($spacing, lg);
@@ -15,8 +13,14 @@
   background-color: #000;
   border-bottom: 2px solid rgb(213, 108, 80);
 
+  transition: transform map-get($transition, 300);
+
+  &--hide{
+    transform: translateY(-100%);
+  }
+
   @include md {
-    position: relative;
+    // position: relative;
     justify-content: space-between;
   }
 
