--- a/src/scss/components/_btns.scss
+++ b/src/scss/components/_btns.scss
@@ -22,7 +22,7 @@
 
     i {
       margin-right: 1rem;
-      
+
       @include sm {
         margin-right: 0.25rem;
       }
@@ -31,7 +31,7 @@
 
   &--sm {
     @include text(base);
-    padding: 0.5em .75em;
+    padding: 0.5em 0.75em;
     border-radius: map-get($border-radius, base);
 
     @include sm {
@@ -40,7 +40,7 @@
 
     i {
       margin-right: 0.75rem;
-      
+
       @include sm {
         margin-right: 0.5rem;
       }
@@ -50,8 +50,10 @@
   &--black {
     background-color: map-get($color, secondary);
     color: map-get($color, primary);
-    &:hover {
-      @include hover-bg-color(map-get($color, secondary));
+    @include hover-query {
+      &:hover {
+        @include hover-bg-color(map-get($color, secondary));
+      }
     }
   }
 
@@ -59,9 +61,11 @@
     background-color: transparent;
     color: map-get($color, primary);
     border: 1px solid map-get($color, primary);
-    
-    &:hover {
-      @include hover-bg-color(map-get($color, secondary));
+
+    @include hover-query {
+      &:hover {
+        @include hover-bg-color(map-get($color, secondary));
+      }
     }
   }
 
@@ -69,8 +73,10 @@
     background-color: red;
     color: map-get($color, primary);
 
-    &:hover {
-      @include hover-bg-color(map-get($color, tertiary))
+    @include hover-query {
+      &:hover {
+        @include hover-bg-color(map-get($color, tertiary));
+      }
     }
   }
 }
