--- a/src/scss/components/_MoviesCards.scss
+++ b/src/scss/components/_MoviesCards.scss
@@ -7,7 +7,7 @@ $gap: 1.5rem;
   @include flex($jc: flex-start, $wrap: wrap);
   margin-top: 4rem;
   gap: $gap;
-  
+
   @include sm {
     gap: 2.5rem;
   }
@@ -16,27 +16,27 @@ $gap: 1.5rem;
 .movies-card-link {
   display: inline-block;
   // @ calc(100%/每列卡片張數 - (卡片之間有幾個$gap?) / 每列卡片張數)
-  max-width: calc(20% - ($gap*4) / 5);
+  max-width: calc(20% - ($gap * 4) / 5);
   flex: 1 0 100%;
 
   @include xl {
-    max-width: calc(25% - ($gap*3) / 4);
+    max-width: calc(25% - ($gap * 3) / 4);
   }
 
   @include lg {
-    max-width: calc(33.3% - ($gap*2) / 3);
+    max-width: calc(33.3% - ($gap * 2) / 3);
   }
 
   @include md {
-    max-width: calc(50% - ($gap*1) / 2);
+    max-width: calc(50% - ($gap * 1) / 2);
   }
 
   @include sm {
     margin-left: auto;
     margin-right: auto;
     max-width: 18.75rem;
-    
-    &:not(:first-child){
+
+    &:not(:first-child) {
       border-top: 1px solid;
       padding-top: 2.5rem;
     }
@@ -51,6 +51,7 @@ $gap: 1.5rem;
   transition: 200ms ease-in-out;
   transition-property: transform, box-shadow;
   cursor: pointer;
+  animation: scale map-get($transition, 500);
 
   &::before {
     content: "";
@@ -127,7 +128,7 @@ $gap: 1.5rem;
 
   &__info {
     @include flex;
-    margin-top: .5rem;
+    margin-top: 0.5rem;
   }
 
   &__vote {
