--- a/src/scss/animation/_animation.scss
+++ b/src/scss/animation/_animation.scss
@@ -7,11 +7,8 @@
 }
 
 @keyframes scale {
-  // 0%{
-  //   transform: scale(0.5);
-  // }
-
-  100%{
-    transform: scale(1);
+  from{
+    opacity: .3;
+    transform: scale(0.5);
   }
 }
