--- a/src/scss/page/_Home.scss
+++ b/src/scss/page/_Home.scss
@@ -77,13 +77,12 @@
     padding-bottom: 6rem;
 
     @include lg {
-      max-width: 37.5rem;
-      margin-left: 5rem;
+      // max-width: 37.5rem;
     }
 
     @include md {
-      max-width: 33.75rem;
-      margin-left: map-get($spacing, lg);
+      // max-width: 33.75rem;
+      // margin-left: map-get($spacing, lg);
       margin-bottom: 5rem;
     }
 
@@ -109,7 +108,7 @@
 
   &__info {
     @include flex($jc: flex-start);
-    @include text(3xl);
+    @include text(xl);
     font-weight: bold;
 
     @include sm {
@@ -118,6 +117,7 @@
   }
 
   &__vote {
+    @include text(xl);
     margin-left: 1.5rem;
 
     i {
@@ -133,9 +133,10 @@
     }
   }
 }
+
 .home {
   position: relative;
-  
+
   &__genres {
     padding-bottom: 3rem;
     padding-top: 3rem;
