--- a/src/scss/page/_Watchlist.scss
+++ b/src/scss/page/_Watchlist.scss
@@ -14,32 +14,31 @@ $gap: 24px;
   padding-top: 48px;
   padding-bottom: 48px;
 
-  .container {
-  }
-
   &__header {
     @include flex($ai: center, $jc: space-between);
   }
 
-  // 頂部切換連結
+  // 頂部切換連結(容器)
   &__links {
     @include flex($jc: center);
     border-radius: 5px;
   }
 
+  // 頂部切換連結(單一)
   &__link {
     padding: 0.825em 1.2em;
     font-weight: bold;
-    background-color: map-get($color, active);
+    border: 1px solid map-get($color, tertiary);
+    transition: background-color map-get($transition, 300);
 
     @include hover-query {
       &:hover {
-        @include hover-bg-color(map-get($color, active));
+        @include hover-bg-color(map-get($color, tertiary));
       }
     }
 
     &.active {
-      background-color: darken($color: map-get($color, active), $amount: 15);
+      background-color: map-get($color, tertiary);
     }
 
     &:nth-child(2) {
@@ -198,7 +197,8 @@ $gap: 24px;
     padding: 0.5rem;
     flex: 1 0 auto;
     width: 33.3%;
-    transition: color map-get($transition, 300);
+    transition: map-get($transition, 300);
+    transition-property: color, background-color;
 
     &:not(:first-child) {
       border-left: 0.0625rem solid;
