--- a/src/scss/base/_global-styles.scss
+++ b/src/scss/base/_global-styles.scss
@@ -18,6 +18,7 @@ body {
     background-color: black;
     font-family: "Roboto", sans-serif;
     overflow-y: scroll;
+    height: 100vh;
 }
 
 a {
