--- a/src/scss/abstracts/_mixin.scss
+++ b/src/scss/abstracts/_mixin.scss
@@ -43,11 +43,11 @@
 
 
 @mixin x-spacing {
-  padding-left: map-get($spacing, lg);
-  padding-right: map-get($spacing, lg);
+  padding-left: map-get($x-spacing, lg);
+  padding-right: map-get($x-spacing, lg);
 
   @include sm {
-    padding-left: map-get($spacing, sm);
-    padding-right: map-get($spacing, sm);
+    padding-left: map-get($x-spacing, sm);
+    padding-right: map-get($x-spacing, sm);
   }
 }
