--- a/src/scss/components/_Header.scss
+++ b/src/scss/components/_Header.scss
@@ -7,12 +7,10 @@
   z-index: 30;
   height: deep-map-get($height, header, lg);
   flex: 1 0 auto;
-  padding-left: deep-map-get($spacing, lg);
-  padding-right: deep-map-get($spacing, lg);
-
-  background-color: #000;
+  padding-left: deep-map-get($x-spacing, lg);
+  padding-right: deep-map-get($x-spacing, lg);
+  background-color: map-get($color, secondary);
   border-bottom: 2px solid rgb(213, 108, 80);
-
   transition: transform map-get($transition, 300);
 
   &--hide {
@@ -21,11 +19,11 @@
 
   @include md {
     justify-content: space-between;
+    padding: 0 deep-map-get($x-spacing, sm);
   }
 
   @include sm {
     height: deep-map-get($height, header, sm);
-    padding: deep-map-get($spacing, sm) deep-map-get($spacing, sm);
   }
 
   &__logo {
@@ -35,10 +33,7 @@
     color: map-get($color, tertiary);
 
     @include sm {
-      @include text(xl);
-    }
-
-    h1 {
+      @include text(2xl);
     }
 
     i {
@@ -49,6 +44,18 @@
   &__menu-btn {
     @include button-reset();
     display: none;
+
+    &--nav-open {
+      position: fixed;
+      z-index: 10;
+      @include md {
+        right: deep-map-get($x-spacing, sm);
+      }
+
+      @include sm {
+        right: deep-map-get($x-spacing, sm);
+      }
+    }
 
     i {
       pointer-events: none;
@@ -68,15 +75,25 @@
   flex: 1 0 auto;
   column-gap: 1.5rem;
   margin-left: 3.5rem;
-
   position: static;
 
   @include md {
     position: fixed;
-    top: deep-map-get($height, header, lg);
+    top: 0;
+    left: 0;
+
+    // left: 100%;
+    // left: 50%;
     z-index: 5;
-    width: calc(100% - deep-map-get($spacing, lg) * 2);
-    left: 50%;
+
+    // height: calc(100vh - deep-map-get($height, header, lg));
+    // width: 100vw;
+    // height: 100vw;
+    width: 100%;
+    height: 100vh;
+    // background-color: red;
+    // width: 250vw;
+    // height: 250vw;
 
     flex-direction: column;
     align-items: center;
@@ -87,28 +104,30 @@
     margin-left: auto;
     margin-right: auto;
 
-    background-color: rgb(0, 0, 0);
+    background-color: map-get($color, secondary);
 
-    visibility: hidden;
-    opacity: 0;
+    // visibility: hidden;
+    // opacity: 0;
+    transition: transform map-get($transition, 500);
+    transform: scaleY(0);
+    // transform-origin: top right;
+    // transition: map-get($transition, 500);
+    // transition-property: transform, opacity, visibility;
 
-    transform: scaleY(0) translateX(-50%);
-    transform-origin: top;
+    // transition-property: all;
+    // transition: transform 500ms, border-radius 1000ms;
   }
 
   @include sm {
-    width: calc(100% - deep-map-get($spacing, sm) * 2);
     top: deep-map-get($height, header, sm);
   }
 
   &--open {
     @include md {
-      transform: scaleY(1) translateX(-50%);
+      border-radius: 0;
+      transform: scaleY(1);
       visibility: visible;
       opacity: 1;
-
-      transition: map-get($transition, 300);
-      transition-property: transform, opacity, visibility;
     }
   }
 
@@ -122,8 +141,8 @@
       content: "";
       position: absolute;
       bottom: -3px;
-      height: 2px;
       width: 100%;
+      height: 2px;
       background-color: rgb(213, 108, 80);
       transform: scaleX(0);
       transition: transform map-get($transition, 150);
