[完成] nav 的修改

--- a/src/scss/animation/_animation.scss
+++ b/src/scss/animation/_animation.scss
@@ -12,3 +12,22 @@
     transform: scale(0.5);
   }
 }
+
+
+// @keyframes slide-to-left {
+//   from {
+//     transform: translateX(100%)
+//   }
+//   to{
+//     transform: translateX(0%)
+//   }
+// }
+
+// @keyframes slide-down {
+//   from {
+//     transform: translateY(-100%)
+//   }
+//   to{
+//     transform: translateY(0%)
+//   }
+// }
