--- a/src/scss/abstracts/_map.scss
+++ b/src/scss/abstracts/_map.scss
@@ -25,6 +25,7 @@ $max-width: (
 // color
 $color: (
   primary: #fff,
+  primary-light: #ffffff4f, // 用於淡色底線
   secondary: #000,
   tertiary: rgb(213, 108, 80),
   active: rgb(213, 108, 80),
@@ -47,6 +48,13 @@ $transition: (
   300: 300ms ease-in-out,
   500: 500ms ease-in-out,
   800: 800ms ease-in-out,
+);
+
+// 電影卡片寬度
+$card-size:(
+  width:(
+    sm: 18.75rem,
+  ),
 );
 
 $height: (
