--- a/src/scss/components/_Header.scss
+++ b/src/scss/components/_Header.scss
@@ -9,8 +9,8 @@
   flex: 1 0 auto;
   padding-left: deep-map-get($x-spacing, lg);
   padding-right: deep-map-get($x-spacing, lg);
-  background-color: map-get($color, secondary);
   border-bottom: 2px solid rgb(213, 108, 80);
+  background-color: map-get($color, secondary);
   transition: transform map-get($transition, 300);
 
   &--hide {
@@ -33,7 +33,7 @@
     color: map-get($color, tertiary);
 
     @include sm {
-      @include text(2xl);
+      @include text(xl);
     }
 
     i {
@@ -42,18 +42,35 @@
   }
 
   &__menu-btn {
+    @include flex($dir: column, $jc: space-between);
     @include button-reset();
     display: none;
 
-    &--nav-open {
-      position: fixed;
-      z-index: 10;
-      @include md {
-        right: deep-map-get($x-spacing, sm);
+    div {
+      width: 1.75rem;
+      height: 0.125rem;
+      background-color: map-get($color, "primary");
+      pointer-events: none;
+      transition: ease-in-out 300ms;
+      transition-property: transform, opacity;
+
+      &:not(:first-child) {
+        margin-top: 6px;
+      }
+    }
+
+    &.active div {
+      &:nth-child(1) {
+        transform: translateY(8px) rotate(45deg);
       }
 
-      @include sm {
-        right: deep-map-get($x-spacing, sm);
+      &:nth-child(2) {
+        transform: rotate(0);
+        opacity: 0;
+      }
+
+      &:nth-child(3) {
+        transform: translateY(-8px) rotate(-45deg);
       }
     }
 
@@ -79,43 +96,26 @@
 
   @include md {
     position: fixed;
-    top: 0;
+    top: deep-map-get($height, header, lg);
     left: 0;
-
-    // left: 100%;
-    // left: 50%;
     z-index: 5;
 
-    // height: calc(100vh - deep-map-get($height, header, lg));
-    // width: 100vw;
-    // height: 100vw;
     width: 100%;
-    height: 100vh;
-    // background-color: red;
-    // width: 250vw;
-    // height: 250vw;
 
     flex-direction: column;
     align-items: center;
     justify-content: center;
     row-gap: 2rem;
 
-    padding: 2rem 0;
+    padding: 3rem 0;
     margin-left: auto;
     margin-right: auto;
 
-    background-color: map-get($color, secondary);
-
-    // visibility: hidden;
-    // opacity: 0;
-    transition: transform map-get($transition, 500);
     transform: scaleY(0);
-    // transform-origin: top right;
-    // transition: map-get($transition, 500);
-    // transition-property: transform, opacity, visibility;
+    transform-origin: top;
 
-    // transition-property: all;
-    // transition: transform 500ms, border-radius 1000ms;
+    background-color: map-get($color, secondary);
+    transition: transform map-get($transition, 300);
   }
 
   @include sm {
@@ -124,10 +124,7 @@
 
   &--open {
     @include md {
-      border-radius: 0;
       transform: scaleY(1);
-      visibility: visible;
-      opacity: 1;
     }
   }
 
@@ -137,26 +134,26 @@
     font-weight: bold;
     transition: color map-get($transition, 150);
 
-    &::before {
-      content: "";
-      position: absolute;
-      bottom: -3px;
-      width: 100%;
-      height: 2px;
-      background-color: rgb(213, 108, 80);
-      transform: scaleX(0);
-      transition: transform map-get($transition, 150);
-    }
-
     @include hover-query() {
       &:hover {
         color: map-get($color, tertiary);
 
         &::before {
           transform: scaleX(1);
-          transform-origin: center;
         }
       }
+    }
+
+    &::before {
+      content: "";
+      position: absolute;
+      bottom: -3px;
+      width: 100%;
+      height: 2px;
+      transform: scaleX(0);
+      transform-origin: center;
+      transition: transform map-get($transition, 150);
+      background-color: map-get($color, tertiary);
     }
 
     &.active {
@@ -167,7 +164,7 @@
         height: 2px;
         width: 100%;
         transform: scaleX(1);
-        background-color: rgb(213, 108, 80);
+        background-color: map-get($color, tertiary);
       }
     }
 
