--- a/src/scss/components/_MoviesCards.scss
+++ b/src/scss/components/_MoviesCards.scss
@@ -4,7 +4,7 @@
 $gap: 1.5rem;
 
 .movies-cards {
-  @include flex($jc: flex-start, $wrap: wrap);
+  @include flex($wrap: wrap);
   margin-top: 4rem;
   gap: $gap;
 
@@ -34,10 +34,10 @@ $gap: 1.5rem;
   @include sm {
     margin-left: auto;
     margin-right: auto;
-    max-width: 18.75rem;
+    max-width: deep-map-get($card-size, width, sm);
 
     &:not(:first-child) {
-      border-top: 1px solid;
+      border-top: 1px solid map-get($color, primary-light);
       padding-top: 2.5rem;
     }
   }
