--- a/src/scss/components/_MoviesCards.scss
+++ b/src/scss/components/_MoviesCards.scss
@@ -66,7 +66,7 @@ $gap: 1.5rem;
     transition: all 300ms ease-in-out;
 
     @include sm {
-      // 行動裝置不需要此
+      // 行動裝置不需要顯示
       display: none;
     }
   }
