--- a/src/scss/page/_Watchlist.scss
+++ b/src/scss/page/_Watchlist.scss
@@ -21,7 +21,7 @@ $gap: 1.5rem;
   // 頂部切換連結(容器)
   &__links {
     @include flex($jc: center);
-    border-radius: .3125rem;
+    border-radius: 0.3125rem;
   }
 
   // 頂部切換連結(單一)
@@ -33,7 +33,7 @@ $gap: 1.5rem;
 
     @include sm {
       @include text(sm);
-      padding: .375rem .75rem;
+      padding: 0.375rem 0.75rem;
     }
 
     @include hover-query {
@@ -57,12 +57,6 @@ $gap: 1.5rem;
   }
 }
 
-.watchcards {
-  @include flex($wrap: wrap);
-  margin-top: 4rem;
-  gap: 1.5rem;
-}
-
 .watchcard {
   $block: &;
   @include flex($dir: column);
@@ -70,27 +64,7 @@ $gap: 1.5rem;
   overflow: hidden;
   border-radius: map-get($border-radius, base);
   background-color: map-get($color, secondary);
-
-  max-width: calc((100% / $perRowAmount) - $gap * ($perRowAmount - 1) / $perRowAmount);
   animation: scale map-get($transition, 500);
-
-  @include xl {
-    max-width: calc((100% / 4) - $gap * (4 - 1) / 4);
-  }
-
-  @include lg {
-    max-width: calc((100% / 3) - $gap * (3 - 1) / 3);
-  }
-
-  @include md {
-    max-width: calc((100% / 2) - $gap * (2 - 1) / 2);
-  }
-
-  @include sm {
-    margin-left: auto;
-    margin-right: auto;
-    max-width: deep-map-get($card-size, width, sm);
-  }
 
   @include hover-query() {
     &:hover {
@@ -116,7 +90,7 @@ $gap: 1.5rem;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.45);
     opacity: 0;
-    transition: all 300ms ease-in-out;
+    transition: opacity 300ms ease-in-out;
 
     @include sm {
       display: none;
