--- a/src/scss/components/_card.scss
+++ b/src/scss/components/_card.scss
@@ -10,6 +10,7 @@ $card-amount: (
   2xl: 5,
   xl: 4,
   lg: 3,
+  // md: 3,
   md: 2,
   sm: 1,
 );
@@ -33,6 +34,7 @@ $gap-amount: (
 }
 
 .card {
+  width: 100%;
   max-width: calc(
     (100% / map-get($card-amount, 2xl)) - ($column-gap * map-get($gap-amount, 2xl) / map-get($card-amount, 2xl))
   );
@@ -55,14 +57,15 @@ $gap-amount: (
     );
   }
 
+  // @include md {
+  //   max-width: calc(
+  //     (100% / map-get($card-amount, md)) - ($column-gap * map-get($gap-amount, md) / map-get($card-amount, md))
+  //   );
+  // }
+
   @include sm {
+    max-width: deep-map-get($card-size, width, sm);
     margin-left: auto;
     margin-right: auto;
-    max-width: deep-map-get($card-size, width, sm);
-
-    &:not(:first-child) {
-      border-top: 1px solid map-get($color, primary-light);
-      padding-top: 2.5rem;
-    }
   }
 }
