--- a/src/scss/components/_MoviesCards.scss
+++ b/src/scss/components/_MoviesCards.scss
@@ -1,56 +1,25 @@
 @use "../abstracts" as *;
 
-// * 卡片之間的 gap (主要是指 column-gap)
-$gap: 1.5rem;
-
 .movies-cards {
-  // ! 註解的都是已經移出的
-  // @include flex($wrap: wrap);
-  // margin-top: 4rem;
-  // gap: $gap;
-
-  @include sm {
-    gap: 2.5rem;
-  }
 }
 
 .movies-card-link {
   animation: scale map-get($transition, 500);
 
-  // @
-  // max-width: calc(20% - ($gap * 4) / 5);
-
-  // @include xl {
-  //   max-width: calc(25% - ($gap * 3) / 4);
-  // }
-
-  // @include lg {
-  //   max-width: calc(33.3% - ($gap * 2) / 3);
-  // }
-
-  // @include md {
-  //   max-width: calc(50% - ($gap * 1) / 2);
-  // }
-
-  // @include sm {
-  //   margin-left: auto;
-  //   margin-right: auto;
-  //   max-width: deep-map-get($card-size, width, sm);
-
-  //   &:not(:first-child) {
-  //     border-top: 1px solid map-get($color, primary-light);
-  //     padding-top: 2.5rem;
-  //   }
-  // }
+  @include sm {
+    &:not(:first-child) {
+      border-top: 1px solid map-get($color, primary-light);
+      padding-top: 2.5rem;
+    }
+  }
 }
 
 .movies-card {
   $block: &;
   position: relative;
-  transition: 200ms ease-in-out;
+  transition: map-get($transition, 150);
   transition-property: transform, box-shadow;
   cursor: pointer;
-
   overflow: hidden;
   border-radius: map-get($border-radius, base);
 
@@ -63,7 +32,8 @@ $gap: 1.5rem;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.45);
     opacity: 0;
-    transition: all 300ms ease-in-out;
+    transition: 300ms ease-in-out;
+    transition-property: opacity, background-color;
 
     @include sm {
       // 行動裝置不需要顯示
@@ -76,6 +46,10 @@ $gap: 1.5rem;
       z-index: 20;
       transform: scale(1.25);
       box-shadow: 0 10px 20px 3px #000000;
+
+      @include md {
+        transform: scale(1.1);
+      }
 
       @include sm {
         transform: none;
