--- a/src/scss/page/_Watchlist.scss
+++ b/src/scss/page/_Watchlist.scss
@@ -1,14 +1,5 @@
 @use "../abstracts" as *;
 
-// * 每一列要容納幾張卡片
-$perRowAmount: 5;
-
-// * 卡片的父層所設定的 gap (指的是 column-gap)
-$gap: 1.5rem;
-
-// @ 單張卡片如何計算 ?
-//  max-width: calc((100% / $perRowAmount) - $gap * ($perRowAmount - 1) / $perRowAmount);
-
 .watchlist {
   @include x-spacing;
   padding-top: 3rem;
@@ -18,13 +9,13 @@ $gap: 1.5rem;
     @include flex($ai: center, $jc: space-between);
   }
 
-  // 頂部切換連結(容器)
+  // 頂部切換連結容器
   &__links {
     @include flex($jc: center);
     border-radius: 0.3125rem;
   }
 
-  // 頂部切換連結(單一)
+  // 頂部切換連結
   &__link {
     padding: 0.5em 1.2em;
     font-weight: bold;
@@ -32,8 +23,7 @@ $gap: 1.5rem;
     transition: background-color map-get($transition, 300);
 
     @include sm {
-      @include text(sm);
-      padding: 0.375rem 0.75rem;
+      @include text(xs);
     }
 
     @include hover-query {
@@ -50,11 +40,6 @@ $gap: 1.5rem;
       border-left: 0;
     }
   }
-
-  &__content {
-    @include flex();
-    gap: $gap;
-  }
 }
 
 .watchcard {
@@ -65,6 +50,12 @@ $gap: 1.5rem;
   border-radius: map-get($border-radius, base);
   background-color: map-get($color, secondary);
   animation: scale map-get($transition, 500);
+
+  @include sm {
+    &:not(:first-child) {
+      margin-top: 2.5rem;
+    }
+  }
 
   @include hover-query() {
     &:hover {
@@ -185,8 +176,10 @@ $gap: 1.5rem;
       border-left: 1px solid;
     }
 
-    &:hover {
-      background-color: map-get($color, tertiary);
+    @include hover-query {
+      &:hover {
+        background-color: map-get($color, tertiary);
+      }
     }
 
     i {
