--- a/src/scss/abstracts/_map.scss
+++ b/src/scss/abstracts/_map.scss
@@ -28,6 +28,8 @@ $color: (
   // 用於淡色底線
   primary-light: #ffffff26,
   secondary: #000,
+  // 半透明暗色背景
+  overlay: rgba(0, 0, 0, 0.45),
   tertiary: rgb(213, 108, 80),
   active: rgb(213, 108, 80),
   // #831e1e
