--- a/src/scss/page/_MovieDetail.scss
+++ b/src/scss/page/_MovieDetail.scss
@@ -120,7 +120,7 @@
     }
   }
 
-  // * 按鈕 (Watch Trailer & Add Watchlist)
+  // * 按鈕 (Watch Video & Add Watchlist)
   &__btns {
     @include flex;
     margin-top: 1rem;
@@ -143,21 +143,27 @@
     }
   }
 
-  &__trailer,
-  &__similar {
-    .container {
-      border-top: 1px solid #333;
-      padding-top: 2rem;
+  // * cast
+  &__cast {
+    @include x-spacing;
+    &-cards {
+    }
+    &-card {
+    }
+    &-img {
+      width: 100%;
+    }
+    &-info {
     }
   }
 
-  // * Trailer (預告)
-  &__trailer {
+  // * Video
+  &__video {
     @include x-spacing;
     margin-top: 2rem;
   }
 
-  &__video-container {
+  &__iframe-container {
     position: relative;
     width: 100%;
     padding-bottom: 56.25%;
@@ -168,13 +174,21 @@
     }
   }
 
-  &__video {
+  &__iframe {
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
     border: 0;
+  }
+
+  &__video,
+  &__similar {
+    .container {
+      border-top: 1px solid #333;
+      padding-top: 2rem;
+    }
   }
 
   // * Similar Movies swiper (相似電影 swiper)
