[未完成] hero 新增文字 transition 效果

--- a/src/scss/abstracts/_map.scss
+++ b/src/scss/abstracts/_map.scss
@@ -41,6 +41,11 @@ $x-spacing: (
   lg: 4rem,
 );
 
+// box-shadow
+$box-shadow: (
+  base: 0 10px 20px 3px #000000,
+);
+
 // border-radius
 $border-radius: (
   base: 10px,
