--- a/src/scss/components/_MoviesCards.scss
+++ b/src/scss/components/_MoviesCards.scss
@@ -1,5 +1,7 @@
 @use "../abstracts" as *;
 
+// @ 此為位於 New, Popular, Genres 使用的樣式
+
 .movies-cards {
   margin-top: 4rem;
 }
@@ -47,7 +49,8 @@
     &:hover {
       z-index: 20;
       transform: scale(1.25);
-      box-shadow: 0 10px 20px 3px #000000;
+      // box-shadow: 0 10px 20px 3px #000000;
+      box-shadow: map-get($box-shadow, base);
 
       @include md {
         transform: scale(1.1);
